fix: fix spacings in top and bottom of sections

--- a/app/components/DetailedNewsPage/DetailedNews.module.css
+++ b/app/components/DetailedNewsPage/DetailedNews.module.css
@@ -35,7 +35,7 @@
 
 @media (max-width: 792px) {
     .detailedNewsContainer {
-        padding: 0 var(--small-spacing) var(--medium-spacing) var(--small-spacing);
+        padding: 30px var(--small-spacing);
     }
     
     .detailedNewsImg {
