--- a/app/contacts/Contacts.module.css
+++ b/app/contacts/Contacts.module.css
@@ -6,5 +6,6 @@
 @media (max-width: 792px) {
     .section {
         flex-direction: column;
+        padding-bottom: 30px;
     }
 }
