--- a/app/news/NewsPage.module.css
+++ b/app/news/NewsPage.module.css
@@ -9,7 +9,7 @@
 
 @media (max-width: 792px) {
     .section {
-        margin-top: 30px;
+        margin: 30px 0;
         padding-left: var(--small-spacing);
         padding-right: var(--small-spacing);
     }
